Suprnova Line Notify Ver 1.1
เพิ่ม config SHOW_GPU_TEMPERATURE สำหรับ เปิด/ปิด ตัววัดอุณหภูมิการ์ดจอ

--- a/LineNotify.exe.config
+++ b/LineNotify.exe.config
@@ -8,5 +8,6 @@
     <add key="SUPRNOVA_APIKEY" value="xxxxxxxxxxxxxxxx" />
     <add key="SUPRNOVA_COIN" value="sigt" />
     <add key="SUPRNOVA_TIME" value="5" />
+    <add key="SHOW_GPU_TEMPERATURE" value="1" />
   </appSettings>
 </configuration>
