Suprnova Line Notify Ver 2.0
=== รายละเอียดการอัพเดท Suprnova Line Notify Ver 2.0 ===
1. เพิ่มฟังชั่น Switch pool
2. เพิ่มฟังชั่นตรวจสอบการเชื่อมต่อกับ API
3. แก้ไขบัคอื่นๆ

--- a/LineNotify.exe.config
+++ b/LineNotify.exe.config
@@ -4,10 +4,11 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="LINE_TOKEN" value="xxxxxxxxxxxxxxx" />
-    <add key="SUPRNOVA_APIKEY" value="xxxxxxxxxxxxxxxx" />
-    <add key="SUPRNOVA_COIN" value="sigt" />
-    <add key="SUPRNOVA_TIME" value="5" />
+    <add key="SWITCH_POOL" value="0" />
+    <add key="LINE_TOKEN" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+    <add key="APIKEY" value="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+    <add key="COIN" value="sigt" />
+    <add key="TIME" value="5" />
     <add key="SHOW_GPU_TEMPERATURE" value="1" />
   </appSettings>
 </configuration>
